# 3d-object-detection-from-2d-dets-2d3dSemantics

./: .gitmodules  README.md  detectron2_env.yml
data/Stanford3dDataset_v1.2/avg_annots/Area_1/WC_1/: ceiling_1.txt  clutter_1.txt  clutter_10.txt  clutter_11.txt  clutter_12.txt  clutter_14.txt  clutter_15.txt  clutter_16.txt  clutter_17.txt  clutter_3.txt  (+16 more)
data/area_json_files/area_1/: area_1.json  area_1_test.json  area_1_train.json
data/area_json_files/area_2/: area2_test.json
data/area_json_files/area_3/: area_3.json  area_3_test.json  area_3_train.json  area_3_val.json
data/area_json_files/area_4/: area_4_test.json
data/area_json_files/area_5/: area_5a.json
data/area_json_files/area_6/: area_6.json
data/area_test_object_index_lists/: area_1_test_object_indexes.json  area_2_test_object_indexes.json  area_3_test_object_indexes.json  area_4_test_object_indexes.json  object_index_list.py
data/notebooks/: area_image_splits.ipynb
data/object_info_json_files/: area_1_object_info.json  area_2_object_info.json  area_3_object_info.json  area_4_object_info.json
results/area_1/: area1_test_3d_inference.csv
results/area_3/: area_3_val_test.csv
results/area_4/: area4_test_3d_inference.csv
results/final_results/: area1_results.txt  area2_results.txt  area3_results.txt  area4_results.txt
src/3d_mapping/: full_3d_inference.py
src/3d_mapping/center-point-multi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convert_coordinates  convert_coordinates.cpp
src/detectron_scripts/: full_inference.py  train.py
src/evaluation/: 3d_center_eval.py
(+9801 files in other folders)
